--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "rsbuild build",
     "dev": "rsbuild dev --open",
     "preview": "rsbuild preview",
-    "biome": "npx @biomejs/biome check --write ./src"
+    "biome": "npx @biomejs/biome check --write ./src",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/runtime": "^7.27.1",
@@ -22,13 +23,19 @@
     "@biomejs/biome": "1.9.4",
     "@rsbuild/core": "^1.3.15",
     "@rsbuild/plugin-react": "^1.3.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.18",
     "@types/react": "^17.0.85",
     "@types/react-dom": "^17.0.26",
     "autoprefixer": "^10.4.21",
     "biome": "^0.3.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "^4.1.6",
+    "ts-jest": "^29.3.3",
     "typescript": "^5.8.3"
   },
   "engines": {
